// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
    <div
      className="table"
    >
      <div
        className="table-header"
      >
        <span
          style={
            Object {
              "width": "40%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Title
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "30%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Author
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Comments
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
            >
              Points
            </button>
          </span>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          Archive
        </span>
      </div>
    </div>
  </div>
  <div
    className="interactions"
  >
    <i
      className="fa fa-spinner fa-spin fa-3x"
    />
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
>
  Button
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form>
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Title
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Author
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Comments
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <span>
        <button
          className="button-inline"
          onClick={[Function]}
        >
          Points
        </button>
      </span>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
